# AERP2040_DCDMINI

./: LICENSE  README.md
data/: GenBin.py  GenLcd2Data.py  カードデータ生成.txt  サブLCD用データテーブル生成.txt
firm/: CMakeLists.txt  audio_pwm.c  audio_pwm.h  audio_pwm.pio  lcd.c  lcd.h  lcd.pio  lcd2.c  lcd2.h  lcd2_data.h  led.c  led.h  main.c  user_define.h
production/: bom.csv  designators.csv  netlist.ipc  positions.csv
